--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Welcome to Code 101!</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 
 <body>
