--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
 </head>
 
 <body>
-
+  <header class="header">
+    <a href="/" class="logo">Khoi Store</a>
+    <ul class="menu">
+      <li><a>Macbook</a></li>
+      <li><a>iPhone</a></li>
+      <li><a>iPad</a></li>
+      <li><a>Airpods</a></li>
+    </ul>
+  </header>
   <main>
 
 
