Update lastest section

--- a/index.html
+++ b/index.html
@@ -8,15 +8,62 @@
 <body>
   <header class="header">
     <a href="/" class="logo">Khoi Store</a>
-    <ul class="menu">
-      <li><a>Macbook</a></li>
-      <li><a>iPhone</a></li>
-      <li><a>iPad</a></li>
-      <li><a>Airpods</a></li>
-    </ul>
+    <nav class="menu">
+      <a href="/">Macbook</a>
+      <a href="/">iPhone</a>
+      <a href="/">iPad</a>
+      <a href="/">Airpods</a>
+    </nav>
   </header>
   <main>
+    <section class="lastest">
+      <h1 class="title">The latest. Take a look at what's new, right now.</h1>
 
+      <div class="items">
+
+        <article class="item">
+          <p class="item__tag">Pre-order now</p>
+          <p class="item__title">Mover. Maker.
+            Boundary breaker. </p>
+          <p class="item__description">From $799.00 or $33.29/mo.per month for
+            24
+            mo.months before trade-in*</p>
+          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
+            alt="iphone-14-yellow" class="thumpnail">
+        </article>
+
+        <article class="item">
+          <p class="item__tag">MACBOOK PRO 14” AND 16”</p>
+          <p class="item__title">iPhone 14<br />Hello Yellow.</p>
+          <p class="item__description">From $799.00 or $33.29/mo.per month for
+            24
+            mo.months before trade-in*</p>
+          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
+            alt="iphone-14-yellow" class="thumpnail">
+        </article>
+
+        <article class="item">
+          <p class="item__tag">Pre-order now</p>
+          <p class="item__title">iPhone 14<br />Hello Yellow.</p>
+          <p class="item__description">From $799.00 or $33.29/mo.per month for
+            24
+            mo.months before trade-in*</p>
+          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
+            alt="iphone-14-yellow" class="thumpnail">
+        </article>
+
+        <article class="item">
+          <p class="item__tag">Pre-order now</p>
+          <p class="item__title">iPhone 14<br />Hello Yellow.</p>
+          <p class="item__description">From $799.00 or $33.29/mo.per month for
+            24
+            mo.months before trade-in*</p>
+          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
+            alt="iphone-14-yellow" class="thumpnail">
+        </article>
+
+      </div>
+    </section>
 
   </main>
 
