--- a/index.html
+++ b/index.html
@@ -65,6 +65,202 @@
       </div>
     </section>
 
+    <section class="macbook">
+      <h1 class="title">Macbook</h1>
+
+      <div class="items">
+
+        <article class="item">
+          <p class="item__tag">Pre-order now</p>
+          <p class="item__title">Mover. Maker.
+            Boundary breaker. </p>
+          <p class="item__description">From $799.00 or $33.29/mo.per month for
+            24
+            mo.months before trade-in*</p>
+          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
+            alt="iphone-14-yellow" class="thumpnail">
+        </article>
+
+        <article class="item">
+          <p class="item__tag">MACBOOK PRO 14” AND 16”</p>
+          <p class="item__title">iPhone 14<br />Hello Yellow.</p>
+          <p class="item__description">From $799.00 or $33.29/mo.per month for
+            24
+            mo.months before trade-in*</p>
+          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
+            alt="iphone-14-yellow" class="thumpnail">
+        </article>
+
+        <article class="item">
+          <p class="item__tag">Pre-order now</p>
+          <p class="item__title">iPhone 14<br />Hello Yellow.</p>
+          <p class="item__description">From $799.00 or $33.29/mo.per month for
+            24
+            mo.months before trade-in*</p>
+          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
+            alt="iphone-14-yellow" class="thumpnail">
+        </article>
+
+        <article class="item">
+          <p class="item__tag">Pre-order now</p>
+          <p class="item__title">iPhone 14<br />Hello Yellow.</p>
+          <p class="item__description">From $799.00 or $33.29/mo.per month for
+            24
+            mo.months before trade-in*</p>
+          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
+            alt="iphone-14-yellow" class="thumpnail">
+        </article>
+
+      </div>
+    </section>
+
+    <section class="iphone">
+      <h1 class="title">iPhone</h1>
+
+      <div class="items">
+
+        <article class="item">
+          <p class="item__tag">Pre-order now</p>
+          <p class="item__title">Mover. Maker.
+            Boundary breaker. </p>
+          <p class="item__description">From $799.00 or $33.29/mo.per month for
+            24
+            mo.months before trade-in*</p>
+          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
+            alt="iphone-14-yellow" class="thumpnail">
+        </article>
+
+        <article class="item">
+          <p class="item__tag">MACBOOK PRO 14” AND 16”</p>
+          <p class="item__title">iPhone 14<br />Hello Yellow.</p>
+          <p class="item__description">From $799.00 or $33.29/mo.per month for
+            24
+            mo.months before trade-in*</p>
+          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
+            alt="iphone-14-yellow" class="thumpnail">
+        </article>
+
+        <article class="item">
+          <p class="item__tag">Pre-order now</p>
+          <p class="item__title">iPhone 14<br />Hello Yellow.</p>
+          <p class="item__description">From $799.00 or $33.29/mo.per month for
+            24
+            mo.months before trade-in*</p>
+          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
+            alt="iphone-14-yellow" class="thumpnail">
+        </article>
+
+        <article class="item">
+          <p class="item__tag">Pre-order now</p>
+          <p class="item__title">iPhone 14<br />Hello Yellow.</p>
+          <p class="item__description">From $799.00 or $33.29/mo.per month for
+            24
+            mo.months before trade-in*</p>
+          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
+            alt="iphone-14-yellow" class="thumpnail">
+        </article>
+
+      </div>
+    </section>
+
+    <section class="iPad">
+      <h1 class="title">iPad</h1>
+
+      <div class="items">
+
+        <article class="item">
+          <p class="item__tag">Pre-order now</p>
+          <p class="item__title">Mover. Maker.
+            Boundary breaker. </p>
+          <p class="item__description">From $799.00 or $33.29/mo.per month for
+            24
+            mo.months before trade-in*</p>
+          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
+            alt="iphone-14-yellow" class="thumpnail">
+        </article>
+
+        <article class="item">
+          <p class="item__tag">MACBOOK PRO 14” AND 16”</p>
+          <p class="item__title">iPhone 14<br />Hello Yellow.</p>
+          <p class="item__description">From $799.00 or $33.29/mo.per month for
+            24
+            mo.months before trade-in*</p>
+          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
+            alt="iphone-14-yellow" class="thumpnail">
+        </article>
+
+        <article class="item">
+          <p class="item__tag">Pre-order now</p>
+          <p class="item__title">iPhone 14<br />Hello Yellow.</p>
+          <p class="item__description">From $799.00 or $33.29/mo.per month for
+            24
+            mo.months before trade-in*</p>
+          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
+            alt="iphone-14-yellow" class="thumpnail">
+        </article>
+
+        <article class="item">
+          <p class="item__tag">Pre-order now</p>
+          <p class="item__title">iPhone 14<br />Hello Yellow.</p>
+          <p class="item__description">From $799.00 or $33.29/mo.per month for
+            24
+            mo.months before trade-in*</p>
+          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
+            alt="iphone-14-yellow" class="thumpnail">
+        </article>
+
+      </div>
+    </section>
+
+    <section class="airpods">
+      <h1 class="title">Airpods</h1>
+
+      <div class="items">
+
+        <article class="item">
+          <p class="item__tag">Pre-order now</p>
+          <p class="item__title">Mover. Maker.
+            Boundary breaker. </p>
+          <p class="item__description">From $799.00 or $33.29/mo.per month for
+            24
+            mo.months before trade-in*</p>
+          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
+            alt="iphone-14-yellow" class="thumpnail">
+        </article>
+
+        <article class="item">
+          <p class="item__tag">MACBOOK PRO 14” AND 16”</p>
+          <p class="item__title">iPhone 14<br />Hello Yellow.</p>
+          <p class="item__description">From $799.00 or $33.29/mo.per month for
+            24
+            mo.months before trade-in*</p>
+          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
+            alt="iphone-14-yellow" class="thumpnail">
+        </article>
+
+        <article class="item">
+          <p class="item__tag">Pre-order now</p>
+          <p class="item__title">iPhone 14<br />Hello Yellow.</p>
+          <p class="item__description">From $799.00 or $33.29/mo.per month for
+            24
+            mo.months before trade-in*</p>
+          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
+            alt="iphone-14-yellow" class="thumpnail">
+        </article>
+
+        <article class="item">
+          <p class="item__tag">Pre-order now</p>
+          <p class="item__title">iPhone 14<br />Hello Yellow.</p>
+          <p class="item__description">From $799.00 or $33.29/mo.per month for
+            24
+            mo.months before trade-in*</p>
+          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
+            alt="iphone-14-yellow" class="thumpnail">
+        </article>
+
+      </div>
+    </section>
+
   </main>
 
 
