Update raw data

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <header class="header">
     <a href="/" class="logo">Khoi Store</a>
     <nav class="menu">
-      <a href="/">Macbook</a>
-      <a href="/">iPhone</a>
-      <a href="/">iPad</a>
-      <a href="/">Airpods</a>
+      <a href="#macbook">Macbook</a>
+      <a href="#iphone">iPhone</a>
+      <a href="#ipad">iPad</a>
+      <a href="#airpods">Airpods</a>
     </nav>
   </header>
   <main>
@@ -23,17 +23,15 @@
 
         <article class="item">
           <p class="item__tag">Pre-order now</p>
-          <p class="item__title">Mover. Maker.
-            Boundary breaker. </p>
+          <p class="item__title">iPhone 14<br />Hello Yellow.</p>
           <p class="item__description">From $799.00 or $33.29/mo.per month for
             24
             mo.months before trade-in*</p>
           <img src="/static/images/lastest/iphone-14-yellow.jpeg"
             alt="iphone-14-yellow" class="thumpnail">
         </article>
-
         <article class="item">
-          <p class="item__tag">MACBOOK PRO 14” AND 16”</p>
+          <p class="item__tag">Pre-order now</p>
           <p class="item__title">iPhone 14<br />Hello Yellow.</p>
           <p class="item__description">From $799.00 or $33.29/mo.per month for
             24
@@ -65,196 +63,176 @@
       </div>
     </section>
 
-    <section class="macbook">
+    <section id="macbook" class="macbook">
       <h1 class="title">Macbook</h1>
 
       <div class="items">
 
         <article class="item">
-          <p class="item__tag">Pre-order now</p>
-          <p class="item__title">Mover. Maker.
-            Boundary breaker. </p>
-          <p class="item__description">From $799.00 or $33.29/mo.per month for
-            24
-            mo.months before trade-in*</p>
-          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
+          <p class="item__tag">Macbook 14" and 16"</p>
+          <p class="item__title">Macbook pro 16inch 2021.</p>
+          <p class="item__description">From $999or $83.25/mo.per month for 12
+            mo.months*</p>
+          <img src="/static/images/macbook/macbook-pro-16.png"
             alt="iphone-14-yellow" class="thumpnail">
         </article>
 
         <article class="item">
-          <p class="item__tag">MACBOOK PRO 14” AND 16”</p>
-          <p class="item__title">iPhone 14<br />Hello Yellow.</p>
-          <p class="item__description">From $799.00 or $33.29/mo.per month for
-            24
-            mo.months before trade-in*</p>
-          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
+          <p class="item__tag">Macbook 14" and 16"</p>
+          <p class="item__title">Macbook pro 16inch 2021.</p>
+          <p class="item__description">From $999or $83.25/mo.per month for 12
+            mo.months*</p>
+          <img src="/static/images/macbook/macbook-pro-16.png"
             alt="iphone-14-yellow" class="thumpnail">
         </article>
 
         <article class="item">
-          <p class="item__tag">Pre-order now</p>
-          <p class="item__title">iPhone 14<br />Hello Yellow.</p>
-          <p class="item__description">From $799.00 or $33.29/mo.per month for
-            24
-            mo.months before trade-in*</p>
-          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
+          <p class="item__tag">Macbook 14" and 16"</p>
+          <p class="item__title">Macbook pro 16inch 2021.</p>
+          <p class="item__description">From $999or $83.25/mo.per month for 12
+            mo.months*</p>
+          <img src="/static/images/macbook/macbook-pro-16.png"
             alt="iphone-14-yellow" class="thumpnail">
         </article>
 
         <article class="item">
-          <p class="item__tag">Pre-order now</p>
-          <p class="item__title">iPhone 14<br />Hello Yellow.</p>
-          <p class="item__description">From $799.00 or $33.29/mo.per month for
-            24
-            mo.months before trade-in*</p>
-          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
+          <p class="item__tag">Macbook 14" and 16"</p>
+          <p class="item__title">Macbook pro 16inch 2021.</p>
+          <p class="item__description">From $999or $83.25/mo.per month for 12
+            mo.months*</p>
+          <img src="/static/images/macbook/macbook-pro-16.png"
             alt="iphone-14-yellow" class="thumpnail">
         </article>
 
       </div>
     </section>
 
-    <section class="iphone">
+    <section id="iphone" class="iphone">
       <h1 class="title">iPhone</h1>
 
       <div class="items">
 
         <article class="item">
-          <p class="item__tag">Pre-order now</p>
-          <p class="item__title">Mover. Maker.
-            Boundary breaker. </p>
-          <p class="item__description">From $799.00 or $33.29/mo.per month for
-            24
-            mo.months before trade-in*</p>
-          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
+          <p class="item__tag">iPhone 14 and 14 pro</p>
+          <p class="item__title">iPhone 14 pro</p>
+          <p class="item__description"> From $999or $41.62/mo.per month for 24
+            mo.months before trade-in*
+          </p>
+          <img src="/static/images/iphone/iphone-14-pro-orange.jpeg"
             alt="iphone-14-yellow" class="thumpnail">
         </article>
 
         <article class="item">
-          <p class="item__tag">MACBOOK PRO 14” AND 16”</p>
-          <p class="item__title">iPhone 14<br />Hello Yellow.</p>
-          <p class="item__description">From $799.00 or $33.29/mo.per month for
-            24
-            mo.months before trade-in*</p>
-          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
+          <p class="item__tag">iPhone 14 and 14 pro</p>
+          <p class="item__title">iPhone 14 pro</p>
+          <p class="item__description"> From $999or $41.62/mo.per month for 24
+            mo.months before trade-in*
+          </p>
+          <img src="/static/images/iphone/iphone-14-pro-orange.jpeg"
             alt="iphone-14-yellow" class="thumpnail">
         </article>
 
         <article class="item">
-          <p class="item__tag">Pre-order now</p>
-          <p class="item__title">iPhone 14<br />Hello Yellow.</p>
-          <p class="item__description">From $799.00 or $33.29/mo.per month for
-            24
-            mo.months before trade-in*</p>
-          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
+          <p class="item__tag">iPhone 14 and 14 pro</p>
+          <p class="item__title">iPhone 14 pro</p>
+          <p class="item__description"> From $999or $41.62/mo.per month for 24
+            mo.months before trade-in*
+          </p>
+          <img src="/static/images/iphone/iphone-14-pro-orange.jpeg"
             alt="iphone-14-yellow" class="thumpnail">
         </article>
 
         <article class="item">
-          <p class="item__tag">Pre-order now</p>
-          <p class="item__title">iPhone 14<br />Hello Yellow.</p>
-          <p class="item__description">From $799.00 or $33.29/mo.per month for
-            24
-            mo.months before trade-in*</p>
-          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
+          <p class="item__tag">iPhone 14 and 14 pro</p>
+          <p class="item__title">iPhone 14 pro</p>
+          <p class="item__description"> From $999or $41.62/mo.per month for 24
+            mo.months before trade-in*
+          </p>
+          <img src="/static/images/iphone/iphone-14-pro-orange.jpeg"
             alt="iphone-14-yellow" class="thumpnail">
         </article>
 
       </div>
     </section>
 
-    <section class="iPad">
+    <section id="ipad" class="iPad">
       <h1 class="title">iPad</h1>
 
       <div class="items">
 
         <article class="item">
           <p class="item__tag">Pre-order now</p>
-          <p class="item__title">Mover. Maker.
-            Boundary breaker. </p>
-          <p class="item__description">From $799.00 or $33.29/mo.per month for
-            24
-            mo.months before trade-in*</p>
-          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
-            alt="iphone-14-yellow" class="thumpnail">
-        </article>
-
-        <article class="item">
-          <p class="item__tag">MACBOOK PRO 14” AND 16”</p>
-          <p class="item__title">iPhone 14<br />Hello Yellow.</p>
-          <p class="item__description">From $799.00 or $33.29/mo.per month for
-            24
-            mo.months before trade-in*</p>
-          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
-            alt="iphone-14-yellow" class="thumpnail">
+          <p class="item__title">iPad Pro </p>
+          <p class="item__description">From $599or $49.91/mo.per month for 12
+            mo.months*</p>
+          <img src="/static/images/ipad/ipad-pro.png" alt="iphone-14-yellow"
+            class="thumpnail">
         </article>
 
         <article class="item">
           <p class="item__tag">Pre-order now</p>
-          <p class="item__title">iPhone 14<br />Hello Yellow.</p>
-          <p class="item__description">From $799.00 or $33.29/mo.per month for
-            24
-            mo.months before trade-in*</p>
-          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
-            alt="iphone-14-yellow" class="thumpnail">
+          <p class="item__title">iPad Pro </p>
+          <p class="item__description">From $599or $49.91/mo.per month for 12
+            mo.months*</p>
+          <img src="/static/images/ipad/ipad-pro.png" alt="iphone-14-yellow"
+            class="thumpnail">
         </article>
 
         <article class="item">
           <p class="item__tag">Pre-order now</p>
-          <p class="item__title">iPhone 14<br />Hello Yellow.</p>
-          <p class="item__description">From $799.00 or $33.29/mo.per month for
-            24
-            mo.months before trade-in*</p>
-          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
-            alt="iphone-14-yellow" class="thumpnail">
+          <p class="item__title">iPad Pro </p>
+          <p class="item__description">From $599or $49.91/mo.per month for 12
+            mo.months*</p>
+          <img src="/static/images/ipad/ipad-pro.png" alt="iphone-14-yellow"
+            class="thumpnail">
+        </article>
+
+        <article class="item">
+          <p class="item__tag">Pre-order now</p>
+          <p class="item__title">iPad Pro </p>
+          <p class="item__description">From $599or $49.91/mo.per month for 12
+            mo.months*</p>
+          <img src="/static/images/ipad/ipad-pro.png" alt="iphone-14-yellow"
+            class="thumpnail">
         </article>
 
       </div>
     </section>
 
-    <section class="airpods">
+    <section id="airpods" class="airpods">
       <h1 class="title">Airpods</h1>
 
       <div class="items">
 
         <article class="item">
           <p class="item__tag">Pre-order now</p>
-          <p class="item__title">Mover. Maker.
-            Boundary breaker. </p>
-          <p class="item__description">From $799.00 or $33.29/mo.per month for
-            24
-            mo.months before trade-in*</p>
-          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
-            alt="iphone-14-yellow" class="thumpnail">
-        </article>
-
-        <article class="item">
-          <p class="item__tag">MACBOOK PRO 14” AND 16”</p>
-          <p class="item__title">iPhone 14<br />Hello Yellow.</p>
-          <p class="item__description">From $799.00 or $33.29/mo.per month for
-            24
-            mo.months before trade-in*</p>
-          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
+          <p class="item__title">AirPods Pro (2nd generation) </p>
+          <p class="item__description">$249.00</p>
+          <img src="/static/images/airpods/airpods-pro.png"
             alt="iphone-14-yellow" class="thumpnail">
         </article>
 
         <article class="item">
           <p class="item__tag">Pre-order now</p>
-          <p class="item__title">iPhone 14<br />Hello Yellow.</p>
-          <p class="item__description">From $799.00 or $33.29/mo.per month for
-            24
-            mo.months before trade-in*</p>
-          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
+          <p class="item__title">AirPods Pro (2nd generation) </p>
+          <p class="item__description">$249.00</p>
+          <img src="/static/images/airpods/airpods-pro.png"
             alt="iphone-14-yellow" class="thumpnail">
         </article>
 
         <article class="item">
           <p class="item__tag">Pre-order now</p>
-          <p class="item__title">iPhone 14<br />Hello Yellow.</p>
-          <p class="item__description">From $799.00 or $33.29/mo.per month for
-            24
-            mo.months before trade-in*</p>
-          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
+          <p class="item__title">AirPods Pro (2nd generation) </p>
+          <p class="item__description">$249.00</p>
+          <img src="/static/images/airpods/airpods-pro.png"
+            alt="iphone-14-yellow" class="thumpnail">
+        </article>
+
+        <article class="item">
+          <p class="item__tag">Pre-order now</p>
+          <p class="item__title">AirPods Pro (2nd generation) </p>
+          <p class="item__description">$249.00</p>
+          <img src="/static/images/airpods/airpods-pro.png"
             alt="iphone-14-yellow" class="thumpnail">
         </article>
 
