Done code 101 demo

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             24
             mo.months before trade-in*</p>
           <img src="/static/images/lastest/iphone-14-yellow.jpeg"
-            alt="iphone-14-yellow" class="thumpnail">
+            alt="iphone-14-yellow" class="item__thumpnail">
         </article>
         <article class="item">
           <p class="item__tag">Pre-order now</p>
@@ -37,17 +37,7 @@
             24
             mo.months before trade-in*</p>
           <img src="/static/images/lastest/iphone-14-yellow.jpeg"
-            alt="iphone-14-yellow" class="thumpnail">
-        </article>
-
-        <article class="item">
-          <p class="item__tag">Pre-order now</p>
-          <p class="item__title">iPhone 14<br />Hello Yellow.</p>
-          <p class="item__description">From $799.00 or $33.29/mo.per month for
-            24
-            mo.months before trade-in*</p>
-          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
-            alt="iphone-14-yellow" class="thumpnail">
+            alt="iphone-14-yellow" class="item__thumpnail">
         </article>
 
         <article class="item">
@@ -57,7 +47,17 @@
             24
             mo.months before trade-in*</p>
           <img src="/static/images/lastest/iphone-14-yellow.jpeg"
-            alt="iphone-14-yellow" class="thumpnail">
+            alt="iphone-14-yellow" class="item__thumpnail">
+        </article>
+
+        <article class="item">
+          <p class="item__tag">Pre-order now</p>
+          <p class="item__title">iPhone 14<br />Hello Yellow.</p>
+          <p class="item__description">From $799.00 or $33.29/mo.per month for
+            24
+            mo.months before trade-in*</p>
+          <img src="/static/images/lastest/iphone-14-yellow.jpeg"
+            alt="iphone-14-yellow" class="item__thumpnail">
         </article>
 
       </div>
@@ -74,7 +74,7 @@
           <p class="item__description">From $999or $83.25/mo.per month for 12
             mo.months*</p>
           <img src="/static/images/macbook/macbook-pro-16.png"
-            alt="iphone-14-yellow" class="thumpnail">
+            alt="iphone-14-yellow" class="item__thumpnail">
         </article>
 
         <article class="item">
@@ -83,7 +83,7 @@
           <p class="item__description">From $999or $83.25/mo.per month for 12
             mo.months*</p>
           <img src="/static/images/macbook/macbook-pro-16.png"
-            alt="iphone-14-yellow" class="thumpnail">
+            alt="iphone-14-yellow" class="item__thumpnail">
         </article>
 
         <article class="item">
@@ -92,7 +92,7 @@
           <p class="item__description">From $999or $83.25/mo.per month for 12
             mo.months*</p>
           <img src="/static/images/macbook/macbook-pro-16.png"
-            alt="iphone-14-yellow" class="thumpnail">
+            alt="iphone-14-yellow" class="item__thumpnail">
         </article>
 
         <article class="item">
@@ -101,7 +101,7 @@
           <p class="item__description">From $999or $83.25/mo.per month for 12
             mo.months*</p>
           <img src="/static/images/macbook/macbook-pro-16.png"
-            alt="iphone-14-yellow" class="thumpnail">
+            alt="iphone-14-yellow" class="item__thumpnail">
         </article>
 
       </div>
@@ -119,7 +119,7 @@
             mo.months before trade-in*
           </p>
           <img src="/static/images/iphone/iphone-14-pro-orange.jpeg"
-            alt="iphone-14-yellow" class="thumpnail">
+            alt="iphone-14-yellow" class="item__thumpnail">
         </article>
 
         <article class="item">
@@ -129,7 +129,7 @@
             mo.months before trade-in*
           </p>
           <img src="/static/images/iphone/iphone-14-pro-orange.jpeg"
-            alt="iphone-14-yellow" class="thumpnail">
+            alt="iphone-14-yellow" class="item__thumpnail">
         </article>
 
         <article class="item">
@@ -139,7 +139,7 @@
             mo.months before trade-in*
           </p>
           <img src="/static/images/iphone/iphone-14-pro-orange.jpeg"
-            alt="iphone-14-yellow" class="thumpnail">
+            alt="iphone-14-yellow" class="item__thumpnail">
         </article>
 
         <article class="item">
@@ -149,7 +149,7 @@
             mo.months before trade-in*
           </p>
           <img src="/static/images/iphone/iphone-14-pro-orange.jpeg"
-            alt="iphone-14-yellow" class="thumpnail">
+            alt="iphone-14-yellow" class="item__thumpnail">
         </article>
 
       </div>
@@ -166,7 +166,7 @@
           <p class="item__description">From $599or $49.91/mo.per month for 12
             mo.months*</p>
           <img src="/static/images/ipad/ipad-pro.png" alt="iphone-14-yellow"
-            class="thumpnail">
+            class="item__thumpnail">
         </article>
 
         <article class="item">
@@ -175,7 +175,7 @@
           <p class="item__description">From $599or $49.91/mo.per month for 12
             mo.months*</p>
           <img src="/static/images/ipad/ipad-pro.png" alt="iphone-14-yellow"
-            class="thumpnail">
+            class="item__thumpnail">
         </article>
 
         <article class="item">
@@ -184,7 +184,7 @@
           <p class="item__description">From $599or $49.91/mo.per month for 12
             mo.months*</p>
           <img src="/static/images/ipad/ipad-pro.png" alt="iphone-14-yellow"
-            class="thumpnail">
+            class="item__thumpnail">
         </article>
 
         <article class="item">
@@ -193,7 +193,7 @@
           <p class="item__description">From $599or $49.91/mo.per month for 12
             mo.months*</p>
           <img src="/static/images/ipad/ipad-pro.png" alt="iphone-14-yellow"
-            class="thumpnail">
+            class="item__thumpnail">
         </article>
 
       </div>
@@ -209,7 +209,7 @@
           <p class="item__title">AirPods Pro (2nd generation) </p>
           <p class="item__description">$249.00</p>
           <img src="/static/images/airpods/airpods-pro.png"
-            alt="iphone-14-yellow" class="thumpnail">
+            alt="iphone-14-yellow" class="item__thumpnail">
         </article>
 
         <article class="item">
@@ -217,7 +217,7 @@
           <p class="item__title">AirPods Pro (2nd generation) </p>
           <p class="item__description">$249.00</p>
           <img src="/static/images/airpods/airpods-pro.png"
-            alt="iphone-14-yellow" class="thumpnail">
+            alt="iphone-14-yellow" class="item__thumpnail">
         </article>
 
         <article class="item">
@@ -225,7 +225,7 @@
           <p class="item__title">AirPods Pro (2nd generation) </p>
           <p class="item__description">$249.00</p>
           <img src="/static/images/airpods/airpods-pro.png"
-            alt="iphone-14-yellow" class="thumpnail">
+            alt="iphone-14-yellow" class="item__thumpnail">
         </article>
 
         <article class="item">
@@ -233,7 +233,7 @@
           <p class="item__title">AirPods Pro (2nd generation) </p>
           <p class="item__description">$249.00</p>
           <img src="/static/images/airpods/airpods-pro.png"
-            alt="iphone-14-yellow" class="thumpnail">
+            alt="iphone-14-yellow" class="item__thumpnail">
         </article>
 
       </div>
