--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="/docs/assets/css/styles.css">
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
@@ -27,7 +27,7 @@
           <p class="item__description">From $799.00 or $33.29/mo.per month for
             24
             mo.months before trade-in*</p>
-          <img src="/docs/assets/images/lastest/iphone-14-yellow.jpeg"
+          <img src="/images/lastest/iphone-14-yellow.jpeg"
             alt="iphone-14-yellow" class="item__thumpnail">
         </article>
         <article class="item">
@@ -36,17 +36,7 @@
           <p class="item__description">From $799.00 or $33.29/mo.per month for
             24
             mo.months before trade-in*</p>
-          <img src="/docs/assets/images/lastest/iphone-14-yellow.jpeg"
-            alt="iphone-14-yellow" class="item__thumpnail">
-        </article>
-
-        <article class="item">
-          <p class="item__tag">Pre-order now</p>
-          <p class="item__title">iPhone 14<br />Hello Yellow.</p>
-          <p class="item__description">From $799.00 or $33.29/mo.per month for
-            24
-            mo.months before trade-in*</p>
-          <img src="/docs/assets/images/lastest/iphone-14-yellow.jpeg"
+          <img src="/images/lastest/iphone-14-yellow.jpeg"
             alt="iphone-14-yellow" class="item__thumpnail">
         </article>
 
@@ -56,7 +46,17 @@
           <p class="item__description">From $799.00 or $33.29/mo.per month for
             24
             mo.months before trade-in*</p>
-          <img src="/docs/assets/images/lastest/iphone-14-yellow.jpeg"
+          <img src="/images/lastest/iphone-14-yellow.jpeg"
+            alt="iphone-14-yellow" class="item__thumpnail">
+        </article>
+
+        <article class="item">
+          <p class="item__tag">Pre-order now</p>
+          <p class="item__title">iPhone 14<br />Hello Yellow.</p>
+          <p class="item__description">From $799.00 or $33.29/mo.per month for
+            24
+            mo.months before trade-in*</p>
+          <img src="/images/lastest/iphone-14-yellow.jpeg"
             alt="iphone-14-yellow" class="item__thumpnail">
         </article>
 
@@ -73,7 +73,7 @@
           <p class="item__title">Macbook pro 16inch 2021.</p>
           <p class="item__description">From $999or $83.25/mo.per month for 12
             mo.months*</p>
-          <img src="/docs/assets/images/macbook/macbook-pro-16.png"
+          <img src="/images/macbook/macbook-pro-16.png"
             alt="iphone-14-yellow" class="item__thumpnail">
         </article>
 
@@ -82,7 +82,7 @@
           <p class="item__title">Macbook pro 16inch 2021.</p>
           <p class="item__description">From $999or $83.25/mo.per month for 12
             mo.months*</p>
-          <img src="/docs/assets/images/macbook/macbook-pro-16.png"
+          <img src="/images/macbook/macbook-pro-16.png"
             alt="iphone-14-yellow" class="item__thumpnail">
         </article>
 
@@ -91,7 +91,7 @@
           <p class="item__title">Macbook pro 16inch 2021.</p>
           <p class="item__description">From $999or $83.25/mo.per month for 12
             mo.months*</p>
-          <img src="/docs/assets/images/macbook/macbook-pro-16.png"
+          <img src="/images/macbook/macbook-pro-16.png"
             alt="iphone-14-yellow" class="item__thumpnail">
         </article>
 
@@ -100,7 +100,7 @@
           <p class="item__title">Macbook pro 16inch 2021.</p>
           <p class="item__description">From $999or $83.25/mo.per month for 12
             mo.months*</p>
-          <img src="/docs/assets/images/macbook/macbook-pro-16.png"
+          <img src="/images/macbook/macbook-pro-16.png"
             alt="iphone-14-yellow" class="item__thumpnail">
         </article>
 
@@ -118,7 +118,7 @@
           <p class="item__description"> From $999or $41.62/mo.per month for 24
             mo.months before trade-in*
           </p>
-          <img src="/docs/assets/images/iphone/iphone-14-pro-orange.jpeg"
+          <img src="/images/iphone/iphone-14-pro-orange.jpeg"
             alt="iphone-14-yellow" class="item__thumpnail">
         </article>
 
@@ -128,7 +128,7 @@
           <p class="item__description"> From $999or $41.62/mo.per month for 24
             mo.months before trade-in*
           </p>
-          <img src="/docs/assets/images/iphone/iphone-14-pro-orange.jpeg"
+          <img src="/images/iphone/iphone-14-pro-orange.jpeg"
             alt="iphone-14-yellow" class="item__thumpnail">
         </article>
 
@@ -138,7 +138,7 @@
           <p class="item__description"> From $999or $41.62/mo.per month for 24
             mo.months before trade-in*
           </p>
-          <img src="/docs/assets/images/iphone/iphone-14-pro-orange.jpeg"
+          <img src="/images/iphone/iphone-14-pro-orange.jpeg"
             alt="iphone-14-yellow" class="item__thumpnail">
         </article>
 
@@ -148,7 +148,7 @@
           <p class="item__description"> From $999or $41.62/mo.per month for 24
             mo.months before trade-in*
           </p>
-          <img src="/docs/assets/images/iphone/iphone-14-pro-orange.jpeg"
+          <img src="/images/iphone/iphone-14-pro-orange.jpeg"
             alt="iphone-14-yellow" class="item__thumpnail">
         </article>
 
@@ -165,7 +165,7 @@
           <p class="item__title">iPad Pro </p>
           <p class="item__description">From $599or $49.91/mo.per month for 12
             mo.months*</p>
-          <img src="/docs/assets/images/ipad/ipad-pro.png" alt="iphone-14-yellow"
+          <img src="/images/ipad/ipad-pro.png" alt="iphone-14-yellow"
             class="item__thumpnail">
         </article>
 
@@ -174,7 +174,7 @@
           <p class="item__title">iPad Pro </p>
           <p class="item__description">From $599or $49.91/mo.per month for 12
             mo.months*</p>
-          <img src="/docs/assets/images/ipad/ipad-pro.png" alt="iphone-14-yellow"
+          <img src="/images/ipad/ipad-pro.png" alt="iphone-14-yellow"
             class="item__thumpnail">
         </article>
 
@@ -183,7 +183,7 @@
           <p class="item__title">iPad Pro </p>
           <p class="item__description">From $599or $49.91/mo.per month for 12
             mo.months*</p>
-          <img src="/docs/assets/images/ipad/ipad-pro.png" alt="iphone-14-yellow"
+          <img src="/images/ipad/ipad-pro.png" alt="iphone-14-yellow"
             class="item__thumpnail">
         </article>
 
@@ -192,7 +192,7 @@
           <p class="item__title">iPad Pro </p>
           <p class="item__description">From $599or $49.91/mo.per month for 12
             mo.months*</p>
-          <img src="/docs/assets/images/ipad/ipad-pro.png" alt="iphone-14-yellow"
+          <img src="/images/ipad/ipad-pro.png" alt="iphone-14-yellow"
             class="item__thumpnail">
         </article>
 
@@ -208,7 +208,7 @@
           <p class="item__tag">Pre-order now</p>
           <p class="item__title">AirPods Pro (2nd generation) </p>
           <p class="item__description">$249.00</p>
-          <img src="/docs/assets/images/airpods/airpods-pro.png"
+          <img src="/images/airpods/airpods-pro.png"
             alt="iphone-14-yellow" class="item__thumpnail">
         </article>
 
@@ -216,7 +216,7 @@
           <p class="item__tag">Pre-order now</p>
           <p class="item__title">AirPods Pro (2nd generation) </p>
           <p class="item__description">$249.00</p>
-          <img src="/docs/assets/images/airpods/airpods-pro.png"
+          <img src="/images/airpods/airpods-pro.png"
             alt="iphone-14-yellow" class="item__thumpnail">
         </article>
 
@@ -224,7 +224,7 @@
           <p class="item__tag">Pre-order now</p>
           <p class="item__title">AirPods Pro (2nd generation) </p>
           <p class="item__description">$249.00</p>
-          <img src="/docs/assets/images/airpods/airpods-pro.png"
+          <img src="/images/airpods/airpods-pro.png"
             alt="iphone-14-yellow" class="item__thumpnail">
         </article>
 
@@ -232,7 +232,7 @@
           <p class="item__tag">Pre-order now</p>
           <p class="item__title">AirPods Pro (2nd generation) </p>
           <p class="item__description">$249.00</p>
-          <img src="/docs/assets/images/airpods/airpods-pro.png"
+          <img src="/images/airpods/airpods-pro.png"
             alt="iphone-14-yellow" class="item__thumpnail">
         </article>
 
